# greycdata

./: Graph_Classification.ipynb  Graph_Regression.ipynb  Graph_Regression_alkane.ipynb  Greycdata_tests.ipynb  Manifest.in  Pipfile  README.md  config.json  convert_data_to_gml.py  convert_gml.py  graph_classification.py  graph_regression.py  pyproject.toml  test_alkane.py
greycdata/: converter.py  datasets.py  file_managers.py  loaders.py  metadata.py  utils.py
greycdata/data/Alkane/: dataset.ds  dataset_boiling_point_names.txt
greycdata/data/Monoterpens/: dataset.ds  dataset_ct.ds
greycdata/data/PAH/: dataset.ds
mygnn/: learner.py  models.py  utils.py
